@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>es.redmic</groupId>
 		<artifactId>server-parent</artifactId>
-		<version>0.1.0</version>
+		<version>0.3.0</version>
 		<relativePath />
 	</parent>
 
@@ -13,24 +13,26 @@
 	<groupId>es.redmic.lib</groupId>
 	<artifactId>elasticsearch</artifactId>
 	<packaging>jar</packaging>
-	<version>0.8.0</version>
+	<version>0.8.0-feature-refactoring</version>
 	<name>ElasticSearch</name>
 	<description>ElasticSearch library </description>
 
 	<properties>
 		<!-- REDMIC -->
-		<redmic.models.version>0.6.1-legacy-0.6</redmic.models.version>
-		<redmic.exceptions.version>0.6.0</redmic.exceptions.version>
-		<redmic.utils.version>0.6.0</redmic.utils.version>
+		<redmic.models.version>0.12.0-feature-refactoring</redmic.models.version>
+		<redmic.exceptions.version>0.10.0</redmic.exceptions.version>
+		<redmic.utils.version>0.10.0-feature-changeJtsVersion</redmic.utils.version>
 
 		<!-- OTHERS -->
-		<elasticsearch.x-pack.version>5.6.1</elasticsearch.x-pack.version>
-		<spatial4j.version>0.6</spatial4j.version>
-		<ma.glasnost.orika.core.version>1.4.6</ma.glasnost.orika.core.version>
-		<commons-io.version>2.6</commons-io.version>
+		<elasticsearch.version>6.6.2</elasticsearch.version>
+		<jts-core.version>1.16.0</jts-core.version>
+		<spatial4j.version>0.7</spatial4j.version>
+		<ma.glasnost.orika.core.version>1.5.4</ma.glasnost.orika.core.version>
+		<commons-io.version>2.8.0</commons-io.version>
+		<jackson-datatype-jts.version>1.0-2.7</jackson-datatype-jts.version>
 
 		<jsonassert.version>1.5.0</jsonassert.version>
-		<powermock.version>1.7.3</powermock.version>
+		<powermock.version>2.0.9</powermock.version>
 	</properties>
 
 	<dependencies>
@@ -64,13 +66,25 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>elasticsearch-rest-high-level-client</artifactId>
+		</dependency>
+
 		<!-- Otros -->
 
 		<dependency>
-			<groupId>org.elasticsearch.client</groupId>
-			<artifactId>x-pack-transport</artifactId>
-			<version>${elasticsearch.x-pack.version}</version>
+			<groupId>org.locationtech.jts</groupId>
+			<artifactId>jts-core</artifactId>
+			<version>${jts-core.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.locationtech.spatial4j/spatial4j -->
 		<dependency>
@@ -92,6 +106,13 @@
 			<version>${commons-io.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.graphhopper.external</groupId>
+			<artifactId>jackson-datatype-jts</artifactId>
+			<version>${jackson-datatype-jts.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- Logs -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -105,6 +126,13 @@
 		</dependency>
 
 		<!-- tests -->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.skyscreamer</groupId>
 			<artifactId>jsonassert</artifactId>
@@ -132,4 +160,15 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
